style: fix spacing styles to desktop layout and add style when option is focused

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -128,6 +128,10 @@ fieldset > p {
   width: calc(100vw - var(--space-m));
 }
 
+.condiment__label:focus-within {
+  border: 2px solid var(--c-blue);
+  border-radius: 8px;
+}
 
 .condiment__option {
   border-radius: 8px;
@@ -176,6 +180,7 @@ fieldset > p {
 .button {
   -webkit-appearance: none;
   -moz-appearance: none;
+  cursor: pointer;
   border: none;
   border-radius: 32px;
   background-color: var(--c-blue);
@@ -192,6 +197,7 @@ fieldset > p {
 
 .button:disabled {
   background-color: var(--c-gray);
+  cursor: initial;
 }
 
 
@@ -332,4 +338,13 @@ fieldset > p {
     display: flex;
     justify-content: space-between;
   }
+
+  form {
+    padding-top: var(--space-xxxl);
+  }
+
+  fieldset > p {
+  margin-bottom: var(--space-xxl);
+}
+
 }
